--- a/index.html
+++ b/index.html
@@ -118,15 +118,16 @@
   <footer>
     &copy; 2025 Paweł Palat. Strona stworzona dzięki kawie.
     <p>
-       <a href="https://www.linkedin.com/in/pawe%C5%82-palat-883932184/" target="_blank"><img src="./images/linkedIn.png" alt="LinkedIn" /> </a>
+       <a href="https://www.linkedin.com/in/pawe%C5%82-palat-883932184/" target="_blank"><img src="./images/linkedIn.png" height="20" alt="LinkedIn" /> </a>
 
-       <a href="https://github.com/ilsanar" target="_blank"><img src="./images/github.png" alt="GitHub" /> </a>
+       <a href="https://github.com/ilsanar" target="_blank"><img src="./images/github.png" height="20" alt="GitHub" /> </a>
 
-       <a href="https://www.facebook.com/pawel.palat" target="_blank"><img src="./images/fb.png" alt="Facebook" /></a>
+       <a href="https://www.facebook.com/pawel.palat" target="_blank"><img src="./images/fb.png" height="20" alt="Facebook" /></a>
 
   </p>
 
   </footer>
 
 </body>
+
 </html>
