--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section id="kontakt">
       <h2>Kontakt</h2>
       
-        <p>Masz temat? Napisz. Może odpiszę. A może już analizuję Twoje dane psychograficzne.</p>
+        <p>Masz temat?</p>
         <a href="mailto:pawel.palat@gmail.com" class="button">Napisz do mnie</a>
      
     </section>
@@ -131,3 +131,4 @@
 </body>
 
 </html>
+
